deployment/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mean-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
