deployment/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: mean-app
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
